--- a/app/src/main/res/layout/item_vote.xml
+++ b/app/src/main/res/layout/item_vote.xml
@@ -30,12 +30,22 @@
         android:layout_margin="10dp" />
 
     <TextView
-        android:id="@+id/tv_vote_number"
+        android:id="@+id/tv_oppose_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
-        android:text="已参与12人"
+        android:text="反对人数：12"
         android:textColor="@color/colorAccent" />
+
+    <TextView
+        android:id="@+id/tv_support_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
+        android:layout_toLeftOf="@+id/tv_oppose_number"
+        android:text="赞成人数：8"
+        android:textColor="@color/colorPrimary" />
 </RelativeLayout>
