--- a/app/src/main/res/layout/activity_vote.xml
+++ b/app/src/main/res/layout/activity_vote.xml
@@ -86,6 +86,7 @@
         android:layout_marginTop="20dp"
         android:checked="false"
         android:gravity="center"
+        android:visibility="gone"
         android:text="是否匿名" />
 
     <EditText
